# meetingAssistant

./: .gitignore  .pre-commit-config.yaml  FEATURES.md  GOOGLE_DRIVE_QUICK_START.md  GOOGLE_DRIVE_SYNC.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  meeting_assistant_v0.py
backend/: .dockerignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  alembic.ini  example.env  init-db.sql  install_pytorch.py  migrate_add_audio_filepath.py  migrate_add_notes.py  migrate_add_rag_tables.py  migrate_attachments.py  migrate_calendar.py  migrate_calendar_postgres.py  migrate_chat_history.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_tool_use.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_add_projects_feature.py  002_add_project_folders.py  003_add_action_item_start_date.py  004_add_project_note_attachments_chunks.py  005_drop_templates_and_scheduled.py  006_project_meetings_tags.py  007_project_action_items.py
backend/app/: __init__.py  _compat.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  startup.py  tasks.py  worker.py
backend/app/core/: __init__.py  analysis.py  cache.py  calendar.py  chat.py  checkpoint.py  chunking.py  config.py  export.py  (+18 more)
backend/core/: google_calendar.py
backend/migrations/: add_global_chat_filters.sql  add_global_chat_tags.sql  add_max_reasoning_depth.sql  add_meeting_date.sql  migrate_transcript_format.sql
backend/tests/: README.md  TESTING.md  conftest.py  test_transcript_formatter.py
(+419 files in other folders)
