[project]
name = "meeting-assistant"
version = "1.0.0"
description = "AI-powered meeting transcription and analysis assistant"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "E712", "B904", "E722", "N805", "F841", "E402", "N815", "SIM105", "SIM115", "N806", "N816", "SIM102", "F401"]  # Final ignores for collapsible if, unused import

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
